<resources>
    <string name="app_name">Gestión Residuos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Añadir residuo</string>
    <string name="menu_gallery">Gestión</string>
    <string name="menu_slideshow">Gestión de usuarios</string>

    <string name="menu_contenedores">Gestión de contenedores</string>
    <string name="menu_mapa">Contenedores cercanos</string>

    <string name="home_second">Home Second</string>

    <string name="titulo">Gestión de Residuos UAO</string>
    <string name="subt">Residuos en el lugar correcto</string>
    <string name="title_activity_mapa">Map</string>

</resources>
