<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gestinresiduos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_home_second"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_contenedores2"
            app:destination="@id/nav_contenedores"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_mapa"
            app:destination="@id/nav_mapa"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.gestinresiduos.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gestinresiduos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gestinresiduos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_contenedores"
        android:name="com.example.gestinresiduos.ui.contenedores.contenedores"
        android:label="@string/menu_contenedores" />
    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.example.gestinresiduos.ui.map.Mapa"
        android:label="@string/menu_mapa"
        tools:layout="@layout/mapa_fragment" />
</navigation>